Fixing swagger for customer controller and adding a delete api
