# app/Http/Controllers/Api/V1/CustomerController.php
@@ -30,6 +30,7 @@ class CustomerController extends Controller
             new OA\QueryParameter(parameter: 'name', name: 'name', description: 'The name of the customer - case insensitive', schema: new OA\Schema(type: 'string')),
             new OA\QueryParameter(parameter: 'email', name: 'email', description: 'The customer email - exact match', schema: new OA\Schema(type: 'string')),
             new OA\QueryParameter(parameter: 'address', name: 'address', description: 'The address of the customer - case insensitive', schema: new OA\Schema(type: 'string')),
+            new OA\QueryParameter(parameter: 'page', name: 'page', description: 'The number of page', schema: new OA\Schema(type: 'int64')),
             new OA\QueryParameter(parameter: 'includeInvoices', name: 'includeInvoices', description: 'Include customer invoices', schema: new OA\Schema(type: 'boolean')),
         ],
         responses: [
@@ -47,14 +48,6 @@ class CustomerController extends Controller
         $customerQuery = $filter->search($request);
         
         return new CustomerCollection($customerQuery->paginate());
-    }
-
-    /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
-    {
-        //
     }
 
     #[OA\Post(
@@ -84,6 +77,35 @@ class CustomerController extends Controller
         return new CustomerResource(Customer::create($request->all()));
     }
 
+    #[OA\Post(
+        path: "/api/v1/customers/bulk",
+        summary: "Create multiple customers",
+        tags: ["Customer Controller"],
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\MediaType(
+                mediaType: "application/json",
+                schema: new OA\Schema(
+                    type: "array",
+                    items: new OA\Items(
+                        type: "object",
+                        required: ["name", "address", "email"],
+                        properties: [
+                            new OA\Property(property: 'name', description: "Customer full name", type: "string"),
+                            new OA\Property(property: 'address', description: "Customer address", type: "string"),
+                            new OA\Property(property: 'email', description: "Customer email", type: "string")
+                        ]
+                    )
+                )
+            )
+        ),
+        responses: [
+            new OA\Response(response: Response::HTTP_CREATED, description: "Customers created successfully"),
+            new OA\Response(response: Response::HTTP_UNPROCESSABLE_ENTITY, description: "Unprocessable entity"),
+            new OA\Response(response: Response::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: Response::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     /**
      * Store newly created resources in storage - bulk.
      */
@@ -119,14 +141,25 @@ class CustomerController extends Controller
         return new CustomerResource($customer);
     }
 
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(Customer $customer)
-    {
-        //
-    }
-
+    #[OA\Put(
+        path: "/api/v1/customers",
+        summary: "Update a customer",
+        tags: ["Customer Controller"],
+        requestBody: new OA\RequestBody(required: true,
+                content: new OA\MediaType(mediaType: "application/json",
+                schema: new OA\Schema(required: ["name", "address", "email"],
+                        properties: [
+                            new OA\Property(property: 'name', description: "Customer full name", type: "string"),
+                            new OA\Property(property: 'address', description: "Customer address", type: "string"),
+                            new OA\Property(property: 'email', description: "Customer email", type: "string")
+    ]))),
+        responses: [
+            new OA\Response(response: Response::HTTP_OK, description: "Customer updated successfully"),
+            new OA\Response(response: Response::HTTP_UNPROCESSABLE_ENTITY, description: "Unprocessable entity"),
+            new OA\Response(response: Response::HTTP_BAD_REQUEST, description: "Bad Request"),
+            new OA\Response(response: Response::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     /**
      * Update the specified resource in storage.
      */
@@ -136,11 +169,35 @@ class CustomerController extends Controller
         return new CustomerResource($customer);
     }
 
+    #[OA\Delete(
+        path: "/api/v1/customers/{id}",
+        summary: "Delete a customer by id",
+        tags: ["Customer Controller"],
+        security: [
+            [
+                'bearerAuth' => []
+            ]
+        ],
+        parameters: [
+            new OA\PathParameter(name: 'id'),
+        ],
+        responses: [
+            new OA\Response(response: Response::HTTP_OK, description: "Customer deleted successfully"),
+            new OA\Response(response: Response::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: Response::HTTP_NOT_FOUND, description: "Not found."),
+            new OA\Response(response: Response::HTTP_INTERNAL_SERVER_ERROR, description: "Server Error")
+        ]
+    )]
     /**
      * Remove the specified resource from storage.
      */
     public function destroy(Customer $customer)
     {
-        //
+        try {
+            $customer->delete();
+            return response()->json(['message' => 'Customer deleted successfully'], Response::HTTP_OK);
+        } catch (\Exception $e) {
+            return response()->json(['message' => 'Failed to delete customer', 'error' => $e->getMessage()], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
     }
 }
