# storage/api-docs/api-docs.json
@@ -59,6 +59,15 @@
                         }
                     },
                     {
+                        "parameter": "page",
+                        "name": "page",
+                        "in": "query",
+                        "description": "The number of page",
+                        "schema": {
+                            "type": "int64"
+                        }
+                    },
+                    {
                         "parameter": "includeInvoices",
                         "name": "includeInvoices",
                         "in": "query",
@@ -84,6 +93,57 @@
                         "bearerAuth": []
                     }
                 ]
+            },
+            "put": {
+                "tags": [
+                    "Customer Controller"
+                ],
+                "summary": "Update a customer",
+                "description": "Update the specified resource in storage.",
+                "operationId": "6a36301c9b30f02364b03b3d592d75e2",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "address",
+                                    "email"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Customer full name",
+                                        "type": "string"
+                                    },
+                                    "address": {
+                                        "description": "Customer address",
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "description": "Customer email",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Customer updated successfully"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                }
             },
             "post": {
                 "tags": [
@@ -137,6 +197,62 @@
                 }
             }
         },
+        "/api/v1/customers/bulk": {
+            "post": {
+                "tags": [
+                    "Customer Controller"
+                ],
+                "summary": "Create multiple customers",
+                "description": "Store newly created resources in storage - bulk.",
+                "operationId": "9284eb0a96c7129b5692efbde0904ebb",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "array",
+                                "items": {
+                                    "required": [
+                                        "name",
+                                        "address",
+                                        "email"
+                                    ],
+                                    "properties": {
+                                        "name": {
+                                            "description": "Customer full name",
+                                            "type": "string"
+                                        },
+                                        "address": {
+                                            "description": "Customer address",
+                                            "type": "string"
+                                        },
+                                        "email": {
+                                            "description": "Customer email",
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Customers created successfully"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                }
+            }
+        },
         "/api/v1/customers/{id}": {
             "get": {
                 "tags": [
@@ -154,6 +270,39 @@
                 "responses": {
                     "200": {
                         "description": "Customer found successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not found."
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Customer Controller"
+                ],
+                "summary": "Get a customer by id",
+                "description": "Remove the specified resource from storage.",
+                "operationId": "699890f72ebf5e504cdbdbc474331081",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Customer deleted successfully"
                     },
                     "401": {
                         "description": "Unauthorized"
